Fix issues when adding new buckets, updating multiple items at once; Small UI fixes (bucket title edit mode, bucket gaps for smaller screens)

--- a/src/styles/AccountPage.module.css
+++ b/src/styles/AccountPage.module.css
@@ -21,6 +21,6 @@
 .right {
   display: flex;
   flex-wrap: wrap;
-  gap: 32px;
+  gap: 26px;
   padding: 3rem 3rem;
 }
