--- a/src/styles/Transaction.module.css
+++ b/src/styles/Transaction.module.css
@@ -10,7 +10,7 @@
 
 .transactionListItemNew {
   background-color: #ffffda;
-  animation: highlight 5s 5s 1;
+  animation: highlight 10s 5s 1;
   animation-fill-mode: forwards;
 }
 
